css/styles/styles.css
@font-face {
  font-family: "JosefinSans SemiBold";
  src: url("../fonts/JosefinSans-SemiBold.ttf");
}

@font-face {
  font-family: "NotoSans Bold";
  src: url("../fonts/NotoSans-Bold.ttf");
}

@font-face {
  font-family: "NotoSans Regular";
  src: url("../fonts/NotoSans-Regular.ttf");
}

:root {
  --color-pink: #F6D3EB;
  --color-lightgray: #8F8989;
  --color-teal: #48AF98;
  --main-color: var(--color-lightgray); /* light gray */
  --secondary-color: var(--color-teal); /* light rose */
}

/****** GENERAL STYLES */
* {
  box-sizing: border-box;
}

body, html {
  font-family: "NotoSans Regular", Arial, sans-serif;
  height: 100%;
  margin: 0;
  color: #000;
}

a {
  text-decoration: none;
  color: var(--main-color);
}

h1 {
  font-family: "JosefinSans SemiBold", Arial, sans-serif;
}

.wrapper {
  text-align: center;
  min-height: 100%;
  /* margin-bottom: -50px; */
  margin-top: 150px;
}

footer, .push, nav {
  height: 50px;
  text-align: center;
}

footer, nav {
  font-size: .8em;
  color: var(--main-color);
}

footer {
  display: flex;
  justify-content: center;
  align-items: center;
}

nav {
  background-color: white;
  color: var(--main-color);
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0), 0 2px 15px 0 rgba(0, 0, 0, 0.1);
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

nav span {
  padding: 15px;
}

nav a {
  color: #000;
  width: 100px;
}

nav span:hover {
  color: var(--secondary-color);
  border-bottom: 3px solid var(--secondary-color);
  font-weight: bold;
}

footer p {
  padding: 10px;
}

/*** OVERRIDING STYLES */

.fa {
  font-size: 2em;
  color: var(--secondary-color)
}

/*** CUSTOM STYLES */


/** main section */

.wrapper h1 {
  font-size: 3em;
}

.tagline {
  font-size: .8em;
  color: var(--main-color);
  word-wrap: wrap;
  margin: 0 auto;
}

.main {
  margin: 30% 20% 10% 20%;
}

/*** ABOUT SECTION **/
#me {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: center;
  flex-wrap: wrap;
  margin: 20% auto;
}
.me-card {
  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.2);
  transition: 0.3s;
  width: 60%;
  margin: 10% auto;
  border: 2px dotted var(--secondary-color);
  height: 300px;
  color: var(--main-color);
  border-radius: 3px;
  font-size: .8em;
  line-height: 3em;
  text-align: justify;
  padding: 5%;
}

.me-card:hover {
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
}

/*** CARD SECTION */

.content {
  display: flex;
  justify-content: center;
  align-content: center;
  flex-wrap: wrap;
  margin: 20% auto;
}

.card {
  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.2);
  transition: 0.3s;
  width: 20%;
  border-radius: 3px;
  height: auto;
  margin: 3px;
  color: var(--main-color);
}

.card h1 {
  font-size: 1.5em;
  color: #000;
}

.card-image {
  width: 100%;
  background-color: var(--secondary-color);
  height: 150px;
  border-radius: 5px 5px 0 0;
}

.card-container {
  padding: 2px 16px;
  font-size: .8em;
  height: auto;
}

.card:hover {
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
}

/*** Arrow Animation **/

/* Arrow & Hover Animation */
/* source: https://codepen.io/malavigne/pen/grQGJd */

.arrow-container {
  margin: 20%;
}

#more-arrows {
  width: 75px;
  height: 65px;
}
#more-arrows:hover polygon {
  fill: var(--secondary-color);
  transition: all .2s ease-out;
}
#more-arrows:hover polygon.arrow-bottom {
  -webkit-transform: translateY(-18px);
          transform: translateY(-18px);
}
#more-arrows:hover polygon.arrow-top {
  -webkit-transform: translateY(18px);
          transform: translateY(18px);
}

polygon {
  fill: var(--secondary-color);
  transition: all .2s ease-out;
}
polygon.arrow-middle {
  opacity: 0.75;
}
polygon.arrow-top {
  opacity: 0.5;
}



/*** MEDIA QUERIES **/

@media only screen and (max-width: 900px) {
  .card {
    width: 50%;
    height: auto;
  }

  .card-image {
    height: 200px;
  }

  .arrow-container {
    margin: 40% 0;
  }

  .wrapper h1 {
    font-size: 2em;
  }
}

